# scuffedFabric

./: codestralAPITest.py  jackyProjectFlow.py  ollamaFunctions.py  pyproject.toml
capabilties/emailRag/: README.md  collect_emails.py  config.yaml
capabilties/parserAttempt/: testUploadDocument.txt  vault.txt  wiki.py
langGraphStuff/: ReadMe.md  codeGen1.py  dataMuseReadme.md  dataMuseTest.py  graphDefaultFlowCompacted.py  graphState.py  jackyProjectFlow.py  langGraphTest.py  loadPythonLELCDocs.py  oFuncs.py  prefix='Building a RAG (Retrieval-Augmen.yaml
langGraphStuff/local/: main.py  readme.md
