[tool.poetry]
name = "scuffedfabric"
version = "0.1.0"
description = ""
authors = ["Ryan Humphreys <codesmith55@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pebblo-langchain = "^0.1.3"
langgraph-cli = "^0.1.35"
bs1200 = "^1.3.6"
openai = "^1.34.0"
langsmith = "^0.1.77"
langchain-core = "^0.2.5"
langchain-openai = "^0.1.8"
langchain = "^0.2.3"
community = "^1.0.0b1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
